--- a/yipl/solution2/index.html
+++ b/yipl/solution2/index.html
@@ -12,7 +12,7 @@
   <title>Solution 2</title>
 		
 		<!-- Bootstrap Core CSS -->
-        <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
